...
            android:layout_marginVertical="50dp"
            android:backgroundTint="@color/colorSelectDateTo"
            android:elevation="10dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btnConfirm"
            app:layout_constraintTop_toBottomOf="@id/stayTextView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
...
                        android:id="@+id/btn_subtract"
                        style="@style/DurationButtons"
                        android:backgroundTint="@color/ga_primary"
                        android:text="-" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_add"
                        style="@style/DurationButtons"
                        android:layout_marginStart="50dp"
                        android:backgroundTint="@color/ga_primary"
                        android:text="+" />

                </LinearLayout>
...
