...
                            android:layout_weight="1"
                            android:text="Your Number Plate"
                            android:textColor="@color/white"
                            android:textSize="28sp" />

                        <TextView
                            android:id="@+id/tv_plate_no"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@android:color/background_light"
                            android:textAlignment="center"
                            android:textSize="28sp" />
...
                    android:textSize="60sp" />
            </androidx.cardview.widget.CardView>
        </RelativeLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:backgroundTint="@color/ga_primary"
            android:text="DONE"
            android:textSize="30sp"
...
