...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appbar"
            app:cardElevation="10dp"
            app:cardCornerRadius="10dp">

            <TextView
                android:id="@+id/tv_welcome_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Welcome \n press here to begin"
                android:textAlignment="center"
                android:layout_margin="20dp"
                android:lineSpacingMultiplier="1.2"
...
