...
            app:hintTextColor="@color/ga_primary"
            app:boxStrokeColor="@color/ga_primary"
            app:hintTextAppearance="@style/TextLabel"
            android:hint="REG NO."
            tools:targetApi="p">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_plate_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textColor="@color/ga_primary"
                android:textCursorDrawable="@color/ga_primary"
                android:inputType="textCapCharacters"
...
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
                android:textAlignment="center"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_validate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Validate"
            app:layout_constraintTop_toBottomOf="@id/til_plate"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="40dp"
...
